--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.0
+gunicorn==20.1.0
 importlib-metadata==4.10.0
 importlib-resources==5.4.0
 itsdangerous==2.0.1
